tests/errors/function_missing_required_args.dang
# Test function call missing required arguments
add_nums(x: Int!, y: Int!): Int! { x + y }

pub result = add_nums(x: 5)
